- Fixed issue in cart rules, some were applied even if no product matched
- Fixed tax ID is not shown for surcharges (Ticket #449)
- Fixed fatal error on order PDF export (Ticket #448)
- Fixed potential issues with data container not being loaded (Ticket #444)
- Fixed: copying mail template did not duplicate languages
- Fixed: Tax rate amount was not mandatory
- Removed default list template in tl_content
- Minor code cleanup

Version 0.2.7 (2011-03-09)
------------------------------
- Added support for language switching on checkout page (changelanguage extension)
- Added support for language switching on order details page (changelanguage extension)
- Added support for __isset() to product, collection, gallery, payment and shipping classes (Contao Core Ticket #2897)
- Added root page option to product list module (Ticket #366)
- Improved ajax overlay position and transparency
- Fixed potential SQL injection in product collection
- Fixed CSS classes in checkout review and order details
- Fixed emails not sent to customers (Ticket #406)
- Fixed tax calculation for prices including taxes and discount
- Fixed float precision on discount rules
- Fixed orders not appearing for non-admin users

Version 0.2.6 (2011-03-01)
------------------------------
- Added label for toggle button in product tree
- Added missing 'enabled' label to tl_iso_shipping_options (Ticket #373)
- Added support for language switching on product reader page (changelanguage extension)
- Added: automatically disable page cache for sites with customer-related modules such as Cart (Ticket #392)
- Improved: Check isDefaultBilling/isDefaultShipping on first checkout
- Improved: Label for payment method is no longer mandatory (will use name if not set)
- Improved: Made text fields for meta description & meta keywords smaller (Ticket #386)
- Improved: Added javascript confirmation before deleting address (Ticket #328)
- Improved: Use generic labels for redirecting to payment provider on checkout