@@ -72,6 +72,7 @@ Version 0.2.8 (2011-05-??)
 - Fixed potential issues with data container not being loaded (Ticket #444)
 - Fixed: copying mail template did not duplicate languages
 - Fixed: Tax rate amount was not mandatory
+- Fixed: Tax ID information for each product was lost when placing the order (Ticket #417)
 - Removed default list template in tl_content
 - Minor code cleanup
 
